--- a/package.json
+++ b/package.json
@@ -1,41 +1,34 @@
 {
-  "name": "yandex.praktikum",
-  "version": "0.0.1",
-  "description": "* Интро\r * Технологии\r * Figma\r * Github",
+  "name": "template",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve",
+    "dev": "webpack serve --mode development",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alex-dust/mesto-project.git"
-  },
   "author": "Oleg Kuzmin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alex-dust/mesto-project/issues"
-  },
-  "homepage": "https://github.com/alex-dust/mesto-project#readme",
+  "license": "",
+  "keywords": [],
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "autoprefixer": "^10.4.4",
-    "babel-loader": "^8.2.4",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.1",
-    "cssnano": "^5.1.5",
-    "gh-pages": "^3.2.3",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "postcss-loader": "^6.2.1",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "css-loader": "^6.7.3",
+    "cssnano": "^6.0.0",
+    "gh-pages": "^5.0.0",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "postcss-loader": "^7.2.4",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
-    "core-js": "^3.21.1"
+    "core-js": "^3.30.1"
   }
 }
